<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonArtikel"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_main"
        android:drawableTop="@drawable/ic_artikel"
        android:fontFamily="@font/poppinsmedium"
        android:paddingTop="10dp"
        android:text="@string/artikel"
        android:textColor="#FAFAFA"
        app:layout_constraintBottom_toTopOf="@+id/buttonAkun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_bias="0.404" />

    <Button
        android:id="@+id/buttonAkun"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="148dp"
        android:background="@drawable/button_main"
        android:drawableTop="@drawable/ic_person"
        android:fontFamily="@font/poppinsmedium"
        android:paddingTop="10dp"
        android:text="@string/akun"
        android:textColor="#FAFAFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/button_main"
        android:drawableTop="@drawable/ic_konsultasi"
        android:fontFamily="@font/poppinsmedium"
        android:paddingTop="5dp"
        android:text="@string/konsultasi"
        android:textColor="#FAFAFA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/welcome"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132" />

    <Button
        android:id="@+id/buttonChat"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginTop="236dp"
        android:background="@drawable/button_main"
        android:drawableTop="@drawable/ic_chat_logo"
        android:fontFamily="@font/poppinsmedium"
        android:paddingTop="10dp"
        android:text="@string/chat"
        android:textColor="#FAFAFA"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonInfo"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/button_main"
        android:drawableTop="@drawable/ic_calendar"
        android:fontFamily="@font/poppinsmedium"
        android:paddingTop="5dp"
        android:text="@string/informasi"
        android:textColor="#FAFAFA"
        app:layout_constraintBottom_toTopOf="@+id/buttonTips"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChat"
        app:layout_constraintVertical_bias="0.488" />

    <Button
        android:id="@+id/buttonTips"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="148dp"
        android:background="@drawable/button_main"
        android:drawableTop="@drawable/ic_informasi"
        android:fontFamily="@font/poppinsmedium"
        android:paddingTop="10dp"
        android:text="@string/tips_and_trick"
        android:textColor="#FAFAFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonAkun"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/garis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086"
        app:srcCompat="@drawable/ic_line" />

</androidx.constraintlayout.widget.ConstraintLayout>